--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
               <div class="heading-block">
                 <h3 class="title">TRUMP ARMY BASE AIRDROP</h3>
                 <p class="desc">
-                  100.000 $TRUMP ready for first 20.000 participants to grab
+                  Get Ready for the Trump Army Base Airdrop! The first 1,000
+                  participants will receive 5,000 $TRUMP each!
                 </p>
                 <!-- <div class="task-group">
                   <a
@@ -59,19 +60,15 @@
 
                 <form id="form" method="post" class="form" name="contract-form">
                   <div class="input-wrapper">
-                    <label for="telegram"> Telegram Username </label>
-                    <input name="telegram" type="text" required />
-                  </div>
-                  <div class="input-wrapper">
-                    <label for="twitter"> Twitter Username </label>
+                    <label for="twitter"> Enter your Twitter Username </label>
                     <input name="twitter" type="text" required />
                   </div>
                   <div class="input-wrapper">
-                    <label for="repost"> Repost Link </label>
+                    <label for="repost"> Enter your Repost Link </label>
                     <input name="repost" type="text" required />
                   </div>
                   <div class="input-wrapper">
-                    <label for="wallet"> Wallet </label>
+                    <label for="wallet"> Enter your Wallet Address </label>
                     <input name="wallet" type="text" required />
                   </div>
 
