--- a/index.html
+++ b/index.html
@@ -16,13 +16,6 @@
     <title>Trump Army Base</title>
   </head>
   <body>
-    <!-- <header id="header">
-      <div class="container">
-        <div class="header-wrapper">
-          <a href="index.html" class="header-logo">Mogg</a>
-        </div>
-      </div>
-    </header> -->
     <main id="content">
       <section id="banner">
         <div class="container">
@@ -31,32 +24,9 @@
               <div class="heading-block">
                 <h3 class="title">TRUMP ARMY BASE AIRDROP</h3>
                 <p class="desc">
-                  Get Ready for the Trump Army Base Airdrop! The first 1,000
-                  participants will receive 5,000 $TRUMP each!
+                  Get Ready for the Trump Army Base Airdrop! <br />
+                  The first 1,000 participants will receive 5,000 $TRUMP each!
                 </p>
-                <!-- <div class="task-group">
-                  <a
-                    href="https://t.me/Mogg_sui"
-                    class="link-btn"
-                    target="_blank"
-                    data-clicked="false"
-                    >Join Telegram
-                  </a>
-                  <a
-                    href="https://x.com/moggthecat"
-                    class="link-btn"
-                    target="_blank"
-                    data-clicked="false"
-                    >Follow X
-                  </a>
-                  <a
-                    href="#"
-                    class="link-btn"
-                    target="_blank"
-                    data-clicked="false"
-                    >Like & Repost
-                  </a>
-                </div> -->
 
                 <form id="form" method="post" class="form" name="contract-form">
                   <div class="input-wrapper">
